product_docs/docs/pem/8.0.1/pem_inst_guide_linux/04_installing_postgres_enterprise_manager/05_configuring_the_pem_server_on_linux.mdx
---
title: "Configuring the PEM Server on Linux Platforms"
---

<div id="configuring_the_pem_server_on_linux" class="registered_link"></div>

<div class="index">

configuring the PEM Server on Linux

</div>

Before configuring the PEM server, ensure that the `sslutils` extension and `hstore` contrib module are installed on your backend database.

-   For an Advanced Server backend database, the `sslutils` extension and `hstore` contrib module are by default installed along with Advanced Server.

-   For a PostgreSQL backend database, ensure you have access to the PostgreSQL community repository, and then install `sslutils` extension and `hstore` contrib module with the command:

    ```sourceCode text
    yum install sslutils_<x> postgresql<X>-contrib
    ```

> Where, `x` is the server version.
>
> !!! Note
>     The `listen_addresses` parameter in postgresql.conf controls which interfaces accept connection attempts, which can help prevent repeated malicious connection requests on insecure network interfaces.It specifies the TCP/IP address(es) on which the server is to listen for connections from client applications. This parameter can only be set at server start.The value takes the form of a comma-separated list of host names and/or numeric IP addresses. The special entry \* corresponds to all available IP interfaces. The entry 0.0.0.0 allows listening for all IPv4 addresses and :: allows listening for all IPv6 addresses. If the list is empty, the server does not listen on any IP interface at all, in which case only Unix-domain sockets can be used to connect to it. The default value for PostgreSQL server is `localhost`, which allows only local TCP/IP “loopback” connections to be made. The default value for Advanced Server is `*`. Any changes to this parameter value requires server restart.

The PEM server package includes a script (`configure-pem-server.sh`) to help automate the configuration process for Linux platform installations. The script is installed in the `/usr/edb/pem/bin` directory. To invoke the script, use the command:

```sourceCode text
/usr/edb/pem/bin/configure-pem-server.sh
```

When invoking the script, you can include command line options to specify configuration properties; the script will prompt you for values that you omit on the command line. The accepted options are:

!!! Note
    If you are using the SSL certificates then make sure that all the SSL certificates are inside the data directory the backend database server. If the certificates are not inside the data directory then the PEM Server's configure script may fail as it looks in to the data directory while configuring the PEM Server.

| **Option** | **Description**                                                                                                                                                                                                                                                         |
| ---------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `-acp`     | Defines PEM Agent certificate path. The default is `/root/.pem`.                                                                                                                                                                                                        |
| `-ci`      | CIDR formatted network address range that Agents will connect to the server from, to be added to the server's `pg_hba.conf` file. For example, `192.168.1.0/24`. The default is `0.0.0.0/0`.                                                                            |
| `-dbi`     | The directory for the database server installation. For example, `/usr/edb/as12` for Advanced Server or `/usr/pgsql-12` for PostgreSQL.                                                                                                                                 |
| `-ds`      | The unit file name of the PEM database server. For Advanced Server, the default file name is `edb-as-12`; for PostgreSQL, it is `postgresql-12`.                                                                                                                        |
| `-ho`      | The host address of the PEM database server.                                                                                                                                                                                                                            |
| `-p`       | The port number of the PEM database server.                                                                                                                                                                                                                             |
| `-ps`      | The service name of the pemagent; the default value is `pemagent`.                                                                                                                                                                                                      |
| `-sp`      | The superuser password of the PEM database server. This value is required.                                                                                                                                                                                              |
| `-su`      | The superuser name of the PEM database server.                                                                                                                                                                                                                          |
| `-t`       | The installation type: Specify 1 if the configuration is for web services and backend database, 2 if you are configuring web services, or 3 if you are configuring the backend database. If you specify 3, please note that the database must reside on the local host. |
| `-un`      | To unregister the PEM Server.                                                                                                                                                                                                                                           |

If you do not provide configuration properties on the command line, you will be prompted for values by the script. When you invoke the script, choose from:

1.  `Web Services and Database` -Select this option if the web server and database both reside on the same host as the PEM server.

2.  `Web Services` -Select this option if the web server resides on a different host than the PEM server.

3.  `Database` -Select this option to configure the PEM backend database for use by the PEM server. Please note that the specified database must reside on the local host.

!!! Note
    If the web server (PEM-HTTPD) and the backend database (PEM Server) reside on separate hosts, configure the database server first (option 3), and then web services (option 2). The script will exit if the backend database is not configured before web services.

After selecting a configuration option, the script will proceed to prompt you for configuration properties. When the script completes, it will create the objects required by the PEM server, or perform the configuration steps required. 1 To view script-related help, use the command:

```sourceCode text
/usr/edb/pem/bin/configure-pem-server.sh -help
```

After configuring the PEM server, you can access the PEM web interface in your browser. Navigate to:

```sourceCode text
https://<ip_address_of_PEM_server>:8443/pem
```
